Fixed alignment of bulk action buttons in favourite list refs #417

--- a/scss/thulb.scss
+++ b/scss/thulb.scss
@@ -567,6 +567,10 @@ span[class*=" services-"] span:first-of-type::before { content: ""; }
   margin-left: 10px;
 }
 
+.flex {
+  display: flex;
+}
+
 .flex-center {
   display: flex;
   align-items: center;
@@ -762,4 +766,17 @@ span.th-bibliography {
 span.service_loan {
   background-color: inherit;
   color: inherit;
+}
+
+.favourite-list {
+  font-size: 13px;
+
+  .cart-controls .checkbox {
+    line-height: 1.1rem;
+    margin-top: 5px;
+
+    input[type="checkbox"] {
+      margin: 0 5px 0 0;
+    }
+  }
 }
